[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Graphics/UI/energy_range.png" type="Texture" id=1]
[ext_resource path="res://Assets/Code/Scripts/Electricity/EnergyRadius.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.40093

[node name="EnergyRadius" type="Area2D"]
z_index = 5
z_as_relative = false
input_pickable = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.560784, 0.666667, 0.654902, 0.380392 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="EnergyCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_EnergyRadius_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_EnergyRadius_area_exited"]
